# swagger_output.json
@@ -91,37 +91,8 @@
       "post": {
         "description": "",
         "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
           "500": {
             "description": "Internal Server Error"
-          }
-        },
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "tableRows": {
-                    "example": "any"
-                  },
-                  "branch": {
-                    "example": "any"
-                  },
-                  "date": {
-                    "example": "any"
-                  },
-                  "min": {
-                    "example": "any"
-                  }
-                }
-              }
-            }
           }
         }
       }
@@ -220,7 +191,20 @@
         }
       }
     },
-    "/api/user/user/{id}": {
+    "/api/esales/export/transactions": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/user/{id}": {
       "get": {
         "description": "",
         "parameters": [
@@ -276,7 +260,7 @@
         }
       }
     },
-    "/api/user/user": {
+    "/api/user/create": {
       "post": {
         "description": "",
         "responses": {
